--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build Site
-      uses: chabad360/hugo-actions@v2
+      uses: chabad360/hugo-actions@3a5b10adf0b017f695597e22ebcb79e40fd6cb4e #v2
       with:
         buildPath: 'public'
         hugoVersion: 'extended_0.80.0'
