--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -21,7 +21,7 @@ jobs:
         args: --gc --minify --cleanDestinationDir
         
     - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.8.0
+        uses: webfactory/uses: webfactory/ssh-agent@d4b9b8ff72958532804b70bbe600ad43b36d5f2e  #v0.8.0
         with:
           ssh-private-key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}     
 
