--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         buildPath: 'public'
         hugoVersion: 'extended_0.80.0'
-        args: --gc --minify --cleanDestinationDir
+        args: -t hyde
         
     - name: Set up SSH
       uses: webfactory/ssh-agent@d4b9b8ff72958532804b70bbe600ad43b36d5f2e  #v0.8.0
