Add clean extra  directory

--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -8,8 +8,10 @@ jobs:
   build-and-deploy:
     runs-on: benchmarks
    
-    steps:
-    
+    steps: 
+    - name: Clean directory
+      run: |
+        sudo rm -rf resources/ public/
 
     - name: Checkout code
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
