--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Nuxeo Benchmarks
 on:
   push:
     branches:
-      - benchmarks
+      - master
 jobs:
   build-and-deploy:
     runs-on: benchmarks
