--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -8,10 +8,12 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ github.ref_name == 'master' && 'production'  || (startsWith(github.ref_name, 'NXDEVOPS') && 'NXDEVOPS') || github.ref_name }}
    
     steps: 
     - name: Install SSH key for Bastion
-      uses: shimataro/ssh-key-action@v2
+      uses: shimataro/ssh-key-action@d4fffb50872869abe2d9a9098a6d9c5aa7d16be4
       with:
         key: ${{ secrets.DEV_TOOLS_BASTION_PRIVATE_KEY }}
         name: id_rsa-bastion
@@ -19,12 +21,15 @@ jobs:
         config: ${{ secrets.CONFIG }}
   
     - name: Install SSH key of Lethe server
-      uses: shimataro/ssh-key-action@v2
+      uses: shimataro/ssh-key-action@d4fffb50872869abe2d9a9098a6d9c5aa7d16be4
       with:
         key: ${{ secrets.DEV_TOOLS_EC2_PRIVATE_KEY }}
         name: id_rsa-target
         known_hosts: ${{ secrets.KNOWN_HOSTS_OF_TARGET }}
         config: ${{ secrets.CONFIG }}
+    - name: Ensure target directory exists
+      run: |
+        ssh lethe.nuxeo.com "sudo mkdir -p /var/www/nuxeo.com/benchmarks/"
 
     - name: Clean directory
       run: |
@@ -53,5 +58,5 @@ jobs:
 
     - name: Rsync to Server
       run: |
-        rsync -rcl --delete ${{ github.workspace }}/public/ \
-              "lethe.nuxeo.com:/var/www/nuxeo.com/benchmarks"
+        rsync -rcl --delete --rsync-path="sudo rsync" ${{ github.workspace }}/public/ \
+        "lethe.nuxeo.com:/var/www/nuxeo.com/benchmarks"
