--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -7,12 +7,33 @@ on:
   workflow_dispatch:  # Manual triggering
 jobs:
   build-and-deploy:
-    runs-on: benchmarks
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{ github.ref_name == 'master' || 'development' }}
    
     steps: 
+    - name: Install SSH key for Bastion
+      uses: shimataro/ssh-key-action@d4fffb50872869abe2d9a9098a6d9c5aa7d16be4
+      with:
+        key: ${{ secrets.DEV_TOOLS_BASTION_PRIVATE_KEY }}
+        name: id_rsa-bastion
+        known_hosts: ${{ secrets.KNOWN_HOSTS_OF_BASTION }}
+        config: ${{ secrets.CONFIG }}
+  
+    - name: Install SSH key of Lethe server
+      uses: shimataro/ssh-key-action@d4fffb50872869abe2d9a9098a6d9c5aa7d16be4
+      with:
+        key: ${{ secrets.DEV_TOOLS_EC2_PRIVATE_KEY }}
+        name: id_rsa-target
+        known_hosts: ${{ secrets.KNOWN_HOSTS_OF_TARGET }}
+        config: ${{ secrets.CONFIG }}
+    - name: Ensure target directory exists
+      run: |
+        ssh lethe.nuxeo.com "sudo mkdir -p /var/www/nuxeo.com/benchmarks/"
+
     - name: Clean directory
       run: |
-        sudo rm -rf resources/ public/
+        ssh -o StrictHostKeyChecking=no lethe.nuxeo.com "sudo rm -rf resources/ public/"
 
     - name: Checkout code
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
@@ -37,9 +58,5 @@ jobs:
 
     - name: Rsync to Server
       run: |
-        rsync -rcl --delete ${{ github.workspace }}/public/ \
-              "${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/nuxeo.com/benchmarks"
-
-              
-    
-    
+        rsync -rcl --delete --rsync-path="sudo rsync" ${{ github.workspace }}/public/ \
+        "lethe.nuxeo.com:/var/www/nuxeo.com/benchmarks"
