--- a/.github/workflows/deploy-nuxeo.com-benchmarks.yml
+++ b/.github/workflows/deploy-nuxeo.com-benchmarks.yml
@@ -29,7 +29,7 @@ jobs:
         config: ${{ secrets.CONFIG }}
     - name: Ensure target directory exists
       run: |
-        ssh StrictHostKeyChecking=no lethe.nuxeo.com "sudo mkdir -p /var/www/nuxeo.com/benchmarks/"
+        ssh -o StrictHostKeyChecking=no lethe.nuxeo.com "sudo mkdir -p /var/www/nuxeo.com/benchmarks/"
 
     - name: Clean directory
       run: |
