--- a/data/bench/platform-1069.yml
+++ b/data/bench/platform-1069.yml
@@ -502,7 +502,7 @@ service: benchmark-1069
 docker_image: docker.platform.dev.nuxeo.com/nuxeo/nuxeo-benchmark:2023.35.3-PR-3617-BUILD-9
 build_url: "https://jenkins.platform.dev.nuxeo.com/job/nuxeo/job/lts/job/nuxeo-benchmark/1069/"
 job_name: "nuxeo/lts/nuxeo-benchmark"
-dbprofile: "mongodb"
+dbprofile: "pgsql"
 bench_suite: "task-NXENG-79-run-ci-benchmark-against-nco-again"
 nuxeonodes: 2
 esnodes: 1
